# mlops-project

./: .gitignore  Gemini.md  pyproject.toml
youtube_agent/: agent.py  channel_stats.py  main.py
