[project]
name = "youtube_agent"
version = "0.1.0"
description = "A YouTube agent to analyze comments."
authors = [{ name = "Madat Mustafayev", email = "mustafayev.madat@gmail.com"},{ name = "Ibrahim Israfilov", email = "ibritics@gmail.com"}]
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["PyYAML>=6.0"]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]